--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="SOUNDAW.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Font awesome/css/font-awesome.css">
     <title>SOUNDAW</title>
 </head>
@@ -21,7 +21,7 @@
         </nav>
 
         <div class="logo">
-            <img src="images/soundawdesign.png" alt="soundaw">
+            <img src="images/logo.png" alt="soundaw">
         </div>
 
         <div class="menu-btn">
@@ -53,7 +53,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="images/code .jpg" alt="code">
+                <img src="images/code.jpg" alt="code">
             </div>
         </section>
 
