--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="images/mic.png">
+                <img src="images/mic.jpg">
             </div>
         </section>
 
