--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="images/dj mixer.jpg">
+                <img src="images/dj-mixer.jpg">
             </div>
         </section>
 
