--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Font awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/svg-with-js.min.css">
+<!--     <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css"> -->
+<!--     <link rel="stylesheet" href="Font awesome/css/font-awesome.css"> -->
     <title>SOUNDAW</title>
 </head>
 
@@ -35,11 +37,18 @@
         <section class="section-follow">
             <h3 class="follow-me">follow us on</h3>
             <div class="social-media">
-                <i class="fa fa-facebook"></i>
+<!--                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter-square"></i>
                 <i class="fa fa-instagram"></i>
                 <i class="fa fa-spotify"></i>
-                <i class="fa fa-telegram">
+                <i class="fa fa-telegram"> -->
+                
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-square-x-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-spotify"></i>
+                <i class="fa-brands fa-telegram"></i>
                     
                 </i>
             </div>
